--- a/rstudio.conf
+++ b/rstudio.conf
@@ -1,30 +1,30 @@
 server {
-if ($host =code.pharmaforecast.blog) {
+if ($host =code.example.blog) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
        listen 80 ;
 listen [::]:80 ;
 
-server_name code.pharmaforecast.blog;
+server_name code.example.blog;
 }
 
 server {
-access_log /var/log/nginx/code.pharmaforecast.blog;
+access_log /var/log/nginx/code.example.blog;
 root /var/www/html;
 index index.html index.htm index.nginx-debian.html;
   listen 443 ssl default_server;
   listen [::]:443 ssl default_server;
-  	 ssl_certificate /etc/letsencrypt/live/code.pharmaforecast.blog/fullchain.pem; # managed by Certbot
-    	 ssl_certificate_key /etc/letsencrypt/live/code.pharmaforecast.blog/privkey.pem; # managed by Certbot
+  	 ssl_certificate /etc/letsencrypt/live/code.example.blog/fullchain.pem; # managed by Certbot
+    	 ssl_certificate_key /etc/letsencrypt/live/code.example.blog/privkey.pem; # managed by Certbot
          include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 	 ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-  server_name code.pharmaforecast.blog;
+  server_name code.example.blog;
 
 location /rstudio/ {
   		rewrite ^/rstudio/(.*)$ /$1 break;
-  		proxy_pass http://61.247.238.10:8787;
-  		proxy_redirect http://61.247.238:8787/ $scheme://$host/rstudio/;
+  		proxy_pass http://MY.PUB.IP:8787;
+  		proxy_redirect http://MY.PUB.IP:8787/ $scheme://$host/rstudio/;
   		proxy_http_version 1.1;
   		proxy_set_header Upgrade $http_upgrade;
   		proxy_set_header Connection $connection_upgrade;
@@ -32,7 +32,7 @@ location /rstudio/ {
 }
 location /shiny-admin/ {
   		rewrite ^/shiny-admin/(.*)$ /$1 break;
-  		proxy_pass http://61.247.238.10:3838;
+  		proxy_pass http://MY.PUB.IP:3838;
   		proxy_redirect / $scheme://$http_host/shiny-admin/;
   		proxy_http_version 1.1;
   		proxy_set_header Upgrade $http_upgrade;
